SCRUM-19: Tratamiento-TTY

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,6 +38,11 @@
                             Generador_nmap
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/tty' %}active{% endif %}" href="/tty">
+                            TTY
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
