--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,10 +16,9 @@
                         Céntrate en hackear, no en recordar sintaxis.
                     </p>
 
-                    <div class="card bg-secondary text-white mb-4 p-3"
-                         style="border: 2px solid #00ff00;">
+                    <div class="card bg-secondary text-white mb-4 p-3" style="border: 2px solid #00ff00;">
                         <div class="card-body">
-                            <a class="btn btn-success btn-lg px-5" href="/alpha">
+                            <a class="btn btn-success btn-lg px-5" href="/nmap">
                                 PROBAR LA APLICACIÓN AHORA
                             </a>
                         </div>
