--- a/src/templates/nmap.html
+++ b/src/templates/nmap.html
@@ -46,7 +46,7 @@
 
 <div class="container px-5 my-5">
     <div class="text-center text-white mb-5">
-        <h1 class="fw-bolder">Generador Nmap (Alpha)</h1>
+        <h1 class="fw-bolder">Generador Nmap</h1>
         <p class="lead text-white-50">Introduce los datos para generar el comando.</p>
     </div>
 
