--- a/src/templates/tty.html
+++ b/src/templates/tty.html
@@ -73,7 +73,7 @@ body {
 
     <div class="d-grid">
         <button type="submit" class="btn btn-success btn-lg">
-            SHOW STEPS
+            MOSTRAR PASOS
         </button>
     </div>
 
