--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,12 +15,11 @@
 <body class="{% block body_class %}bg-dark{% endblock %}">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container px-5">
-            <img src="{{ url_for('static', filename='assets/0xFlag_Logo.png') }}"
-                class="position-absolute top-0 start-0 m-3"
-                style="width: 80px; height:auto;"
-                alt="Logo">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
+        <div class="container-fluid px-5">
+            <a class="navbar-brand" href="/">
+                <img src="{{ url_for('static', filename='assets/0xFlag_Logo.png') }}" alt="Logo" width="50" height="auto" class="d-inline-block align-text-center me-2">
+            </a>
 
             <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse"
@@ -31,16 +30,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
+                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/alpha' %}active{% endif %}" href="/alpha">
-                            Generador_nmap
-                        </a>
+                        <a class="nav-link {% if request.path == '/nmap' %}active{% endif %}" href="/nmap">Generador Nmap</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/tty' %}active{% endif %}" href="/tty">
-                            TTY
+                        <a class="nav-link {% if request.path == '/tty' %}active{% endif %}" href="/tty">TTY</a>
+                    </li>
+                    <li class="nav-item border-start border-secondary ms-2 ps-2">
+                        <a class="nav-link {% if request.path == '/settings' %}active{% endif %}" href="/settings">
+                            <i class="bi bi-gear-fill"></i> Config
                         </a>
                     </li>
                 </ul>
@@ -50,6 +50,10 @@
 
     <!-- Page content -->
     {% block content %}{% endblock %}
+
+    <div class="text-center mt-4">
+        <a href="/" class="text-white-50">← Volver al Inicio</a>
+    </div>
 
     <!-- Footer (optional, add later if you want) -->
     
