--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/tty' %}active{% endif %}" href="/tty">TTY</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/discovery' %}active{% endif %}" href="/discovery">Discovery</a>
+                    </li>
                     <li class="nav-item border-start border-secondary ms-2 ps-2">
                         <a class="nav-link {% if request.path == '/settings' %}active{% endif %}" href="/settings">
                             <i class="bi bi-gear-fill"></i> Config
