--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -41,6 +41,11 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/discovery' %}active{% endif %}" href="/discovery">Discovery</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/reverse' %}active{% endif %}" href="/reverse">Reverse Shell</a>
+                    </li>
+
                     <li class="nav-item border-start border-secondary ms-2 ps-2">
                         <a class="nav-link {% if request.path == '/history' %}active{% endif %}" href="/history">Historial</a>
                     </li>
