--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -72,6 +72,7 @@
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
